--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = pcmanfm
+$fileManager = nautilus
 $menu = wofi --show drun
 $browser = firefox
 
@@ -188,7 +188,7 @@ bind = $mainMod, q, killactive,
 bind = $mainMod, m, exit,
 bind = $mainMod, e, exec, $fileManager
 bind = $mainMod, v, togglefloating,
-bind = $mainMod, r, exec, $menu
+bind = $mainMod, d, exec, $menu
 bind = $mainMod, p, pseudo, # dwindle
 bind = $mainMod, j, togglesplit, # dwindle
 
